--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
+    "@iconify/vue": "^5.0.0",
     "@supabase/supabase-js": "^2.55.0",
     "@vee-validate/zod": "^4.15.1",
     "@vueuse/head": "^2.0.0",
