--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
     "vue-sonner": "^2.0.8",
+    "vue3-marquee": "^4.2.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
