--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@iconify/vue": "^5.0.0",
     "@supabase/supabase-js": "^2.55.0",
     "@vee-validate/zod": "^4.15.1",
+    "@vueuse/core": "^13.9.0",
     "@vueuse/head": "^2.0.0",
+    "@vueuse/motion": "^3.0.3",
     "dayjs": "^1.11.18",
     "dompurify": "^3.2.6",
     "element-plus": "^2.10.7",
